# acidcamGL

./: CMakeLists.txt  README.md  midi.midi_cfg
.github/codex-prompts/: harness_resume_batch.md
.github/workflows/: harness-batch-loop.yml  harness-batch.yml
docs/harness/: ARCHITECTURE.md  AUTOMATION_LOOP.md  BATCH_PLAN.md  BUILD_AND_RUN.md  FILE_MAP.md  INDEX.md  PROGRESS_STATE.md
docs/harness/TEMPLATES/: FUNCTION_DOC_TEMPLATE.md
docs/harness/source/: acidcam_window.cpp.md  autofilter.hpp.md  ffmpeg_write.cpp.md  ffmpeg_write.h.md  gl_shader.cpp.md  gl_shader.hpp.md  gl_window.cpp.md  gl_window.hpp.md  ipc_client.cpp.md  ipc_client.hpp.md  keymap.cpp.md  keymap.hpp.md
docs/harness/source/include/KHR/: khrplatform.h.md
docs/harness/source/macos-static/: ac-filtercat.h.md  acidcam_window.cpp.md  autofilter.hpp.md  ffmpeg_write.cpp.md  ffmpeg_write.h.md  fractal.h.md  gl_shader.cpp.md  gl_shader.hpp.md  gl_window.cpp.md  gl_window.hpp.md  ipc_client.cpp.md  ipc_client.hpp.md  keymap.cpp.md  keymap.hpp.md
docs/harness/source/macos-static/app/acidcamGL.app/Contents/Frameworks/Syphon.framework/Versions/A/Headers/: Syphon.h.md  SyphonClient.h.md  SyphonImage.h.md  SyphonServer.h.md  SyphonServerDirectory.h.md
docs/harness/source/macos-static/libacidcam/: ac-alpha.cpp.md  ac-basic.cpp.md  ac-box.cpp.md  ac-filter10.cpp.md  ac-filter11.cpp.md  ac-filter12.cpp.md  ac-filter13.cpp.md  ac-filter14.cpp.md
launcher.gui/: auto_window.cpp  main_window.cpp  main_window.hpp  options_window.cpp  stylesheet.qss
scripts/harness/: prepare_harness_pr.sh
source/: Makefile.linux  Makefile.midi  main.cpp  midi.hpp
